some findbugs addressed.